deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: homepage-deployment
  namespace: nzdev-org-homepage
  labels:
    app: node
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: asskit/nzdev-org:build-20250904161827 # {"$imagepolicy": "nzdev-org-homepage:homepage-image-policy"}
        ports:
        - name: web
          containerPort: 8080
      imagePullSecrets:
      - name: homepage-registry
