deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: nzdev-org-homepage
spec:
  selector:
    app: node
  ports:
  - name: http
    targetPort: 8080
    port: 80
